Fix alignment and arrangement of elements in the reviews page for a particular movie. Add border at the bottom of each review

--- a/TomatoSearch/website/src/app/styles/customisations.scss
+++ b/TomatoSearch/website/src/app/styles/customisations.scss
@@ -37,6 +37,14 @@ html {
       width: 100%;
       font-size: 14px;
       line-height: 1.5;
+
+      // &__review {
+      //   max-width: 80%;
+      // }
+
+      // &__poster {
+      //   margin-left: 20px;
+      // }
     }
   }
 }
@@ -60,4 +68,26 @@ html {
   border-radius: 3px;
   color:#08c;
   display:none;
+}
+
+.col-9 {
+  width: 75%;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.col-3 {
+  width: 25%;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.item-block {
+  border-bottom: solid 1px #d9d9d9;
+  margin-top: 30px;
+  width: 100%;
+}
+
+.item-block:last-child {
+  border-bottom: none;
 }
